Replace furo.GraphqlLauncherHooks to GraphqlType.LauncherHooks

--- a/pages/client/company-sponsors.html
+++ b/pages/client/company-sponsors.html
@@ -41,7 +41,7 @@
     import BaseFormElementClerk from '../../lib/domClerks/BaseFormElementClerk.js'
 
     /**
-     * @type {furo.GraphqlLauncherHooks}
+     * @type {GraphqlType.LauncherHooks}
      */
     const launcherHooks = {
       async beforeRequest (payload) {
