--- a/pages/client/sign-up.html
+++ b/pages/client/sign-up.html
@@ -81,7 +81,7 @@
     import SignUpFormElementClerk from '../../app/domClerk/SignUpFormElementClerk.js'
 
     /**
-     * @type {furo.GraphqlLauncherHooks}
+     * @type {GraphqlType.LauncherHooks}
      */
     const launcherHooks = {
       async beforeRequest (payload) {
