Add link to RESTful API demo page in index.html

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
     </section>
 
     <section>
+      <h2>RESTful API client</h2>
+
+      <div><a href="pages/client/restfulapi.html">RESTful API client</a></div>
+    </section>
+
+    <section>
       <h2>Form tools</h2>
 
       <div></div><a href="pages/form-controls-inspector.html">Form Controls Inspector</a></div>
