Kick out actual name from sample page of sign-up

--- a/pages/client/sign-up.html
+++ b/pages/client/sign-up.html
@@ -259,7 +259,7 @@
           name="email"
           type="text"
           placeholder="メールアドレスを入力してください。"
-          value="stew.eucen@openreach.tech"
+          value="john.doe@example.com",
         >
         <div data-validation-message="email"></div>
       </label>
@@ -281,7 +281,7 @@
           name="firstName"
           type="text"
           placeholder="Please enter your first name."
-          value="Eucen"
+          value="John"
         >
         <div data-validation-message="firstName"></div>
       </label>
@@ -292,7 +292,7 @@
           name="lastName"
           type="text"
           placeholder="Please enter your last name."
-          value="Stew"
+          value="Doe"
         >
         <div data-validation-message="lastName"></div>
       </label>
